# music-rs

./: Cargo.toml  README.md  docker-compose.yml  userscript-album.js  userscript.js
.sqlx/: query-082c092df98d245751ef22e307121c2a9a7c371d35b9092cf64c4271c22c1aae.json  query-0a55c4ef2f1049c59be960e2a320fec1abf55f2b21f71664e05ae36ca2f22ef7.json  query-1c527225259cad302d1093bab4da0da528cff5b2fd641ee880eb7ea75071e1dc.json  query-2180c551ee5398c247b6b780802bea85b3d9afe41a66ff2e0dbf278da3955a84.json  query-332596b01b1c3fc7050e7ff3a3e17d0dd4fc4433a1c467b85a6281d15f52c203.json  query-3b05342c4a06ba610b3fccc3635cb009e98607a1e7f6d9447605849ccf341115.json  query-7a6b01492e9e60b93af1b517df20852e8e9ef389334abf2ec7f515e542ed6dda.json  query-7f3eaff624126f1c64edf07490213c6bba7daccd4c45fdf3ab4ebeab318c58a5.json  query-8624fb9376ea5396d152ee6314f043411ae6b37bfcbbb5d9017aa0205b49eef2.json  query-9e1421e821cf515f9b951be3a208502bb22e4b140e75015e1b276254100adcb6.json  query-9ecf094e88d2af7b9c03ab18cb655f01439fd835cc32a191d44e6b0c6042ec45.json  query-d133f3a0c54a01fe450ee34ebd9c196209d4570a94586ede5f1655b568b8c2df.json
migrations/: 20250616084900_uuidv7.down.sql  20250616084900_uuidv7.up.sql  20250616085003_artists.down.sql  20250616085003_artists.up.sql  20250616085246_genres.down.sql  20250616085246_genres.up.sql  20250616085324_albums.down.sql  20250616085324_albums.up.sql  20250616085414_album_artists.down.sql  20250616085414_album_artists.up.sql  20250616085555_album_genres.down.sql  20250616085555_album_genres.up.sql  20250623060427_album_scores.down.sql  20251120061400_tracks.down.sql  (+14 more)
(+9 files in other folders)
